--- a/devops/argocd/argocd-ingress.yaml
+++ b/devops/argocd/argocd-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ingress-argocd
   namespace: argocd
   annotations:
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   ingressClassName: nginx
